fix: padding of eco-wrap not shown in mobile mode

--- a/assets/style/component/_eco.scss
+++ b/assets/style/component/_eco.scss
@@ -1,5 +1,5 @@
 .eco-wrap {
-    padding: 60px 0;
+    padding: 60px auto;
 
     .eco-info {
         margin:  auto;
